<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1">
  <DUT Name="E_CAC_State" Id="{e30f6d80-c6a3-43a3-b7a0-475e42b8ff14}">
    <Declaration><![CDATA[TYPE E_CAC_State :
(
	E_CAC_IDLE,
	E_CAC_OPENFILE,
	E_CAC_BUILDXMLIMAGE,
	E_CAC_WRITEXMLIMAGE,
	E_CAC_CLOSEXMLIMAGE,
	E_CAC_CLOSEFILE,
	E_CAC_FINDFOLDER,
	E_CAC_FINDFILE,
	E_CAC_READDATA,
	E_CAC_WRITEDATA,
	E_CAC_CREATEFOLDER,
	E_CAC_DELETEFOLDER,
	E_CAC_DELETEFILE,
	E_CAC_CREATEOACDATA,
	E_CAC_CREATEOCVDATA,
	E_CAC_WRITEOCVDATA,
	E_CAC_DELETEOAC,
	E_CAC_DELETEOCV1,
	E_CAC_DELETEOCV2,
	E_CAC_COPYFILE,
	E_CAC_MOVEFILE,
	E_CAC_RENAMEFILE,
	E_CAC_VALIDATECASE,
	E_CAC_VALIDATEOUTER,
	E_CAC_VALIDATEOAC,
	E_CAC_VALIDATEPACK,
	E_CAC_DUPLICATEOUTERCHECK,
	E_CAC_DBREQUEST,
	E_CAC_DBRESPONSE,
	E_CAC_CHECKOUTERDUPLICATES,
	E_CAC_CHECKPACKDUPLICATES,
	E_CAC_DONE
);
END_TYPE]]></Declaration>
  </DUT>
</TcPlcObject>